Bug where book gets cut off is now fixed :]
-Also I added an additonal set of controls for changing the page for the books. J just in case

--- a/assets/css/BookStyleJutsu.css
+++ b/assets/css/BookStyleJutsu.css
@@ -17,6 +17,7 @@
   perspective: 1000px;
 }
 
+
 .book:hover > .book-front,
 .book.open > .book-front {
   transform: rotateY(-180deg) translateZ(0);
@@ -257,3 +258,7 @@
   }
 }
 
+/* Allow book animations to overflow */
+.swiper2 {
+  overflow: visible !important;
+}
